[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Task.gd" type="Script" id=2]

[node name="Button" type="Button" groups=["task"]]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 116.0
margin_top = 119.0
margin_right = 192.0
margin_bottom = 189.0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 117.0
margin_top = 15.0
margin_right = 193.0
margin_bottom = 85.0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 21.0
margin_top = 122.0
margin_right = 97.0
margin_bottom = 192.0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="." groups=["todo_container"]]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
